Replace template values with real data

--- a/render/src/templates/index.html
+++ b/render/src/templates/index.html
@@ -438,8 +438,8 @@
                 <img class="WeatherDetails-item-icon WeatherDetails-item-icon--svg" src="humidity.svg" />
               </div>
               <div>
-                <span id="current-rain-probability" class="WeatherDetails-item-value">23</span><span
-                  class="WeatherDetails-item-unit">%</span>
+                <span id="current-weather-precipitation" class="WeatherDetails-item-value">23</span><span
+                  class="WeatherDetails-item-unit">mm</span>
               </div>
             </li>
 
@@ -493,121 +493,169 @@
           Today
         </div>
         <div class="Forecast-item">
-          <div class="Forecast-item-time">9:00</div>
+          <div id="forecast-item-0-time" class="Forecast-item-time">9:00</div>
           <div class="Forecast-item-icon-container">
             <i class="Forecast-item-icon wi wi-day-sunny"></i>
           </div>
           <div class="Forecast-item-numbers">
             <div class="Forecast-item-temperature">
-              <span class="Forecast-item-value">5</span><span class="Forecast-item-unit">°C</span>
+              <span id="forecast-item-0-temperature" class="Forecast-item-value">5</span><span
+                class="Forecast-item-unit">°C</span>
             </div>
             <div>
-              <span class="Forecast-item-value">2</span><span class="Forecast-item-unit">m/s</span>
+              <span id="forecast-item-0-wind" class="Forecast-item-value">2</span><span
+                class="Forecast-item-unit">m/s</span>
+            </div>
+            <div>
+              <span id="forecast-item-0-precipitation" class="Forecast-item-value">2</span><span
+                class="Forecast-item-unit">mm</span>
             </div>
           </div>
         </div>
 
         <div class="Forecast-item">
-          <div class="Forecast-item-time">12:00</div>
+          <div id="forecast-item-1-time" class="Forecast-item-time">9:00</div>
           <div class="Forecast-item-icon-container">
             <i class="Forecast-item-icon wi wi-day-sunny"></i>
           </div>
           <div class="Forecast-item-numbers">
             <div class="Forecast-item-temperature">
-              <span class="Forecast-item-value">5</span><span class="Forecast-item-unit">°C</span>
+              <span id="forecast-item-1-temperature" class="Forecast-item-value">5</span><span
+                class="Forecast-item-unit">°C</span>
             </div>
             <div>
-              <span class="Forecast-item-value">2</span><span class="Forecast-item-unit">m/s</span>
+              <span id="forecast-item-1-wind" class="Forecast-item-value">2</span><span
+                class="Forecast-item-unit">m/s</span>
+            </div>
+            <div>
+              <span id="forecast-item-1-precipitation" class="Forecast-item-value">2</span><span
+                class="Forecast-item-unit">mm</span>
             </div>
           </div>
         </div>
 
         <div class="Forecast-item">
-          <div class="Forecast-item-time">15:00</div>
-          <div class="Forecast-item-icon-container">
-            <i class="Forecast-item-icon wi wi-day-fog"></i>
-          </div>
-          <div class="Forecast-item-numbers">
-            <div class="Forecast-item-temperature">
-              <span class="Forecast-item-value">7</span><span class="Forecast-item-unit">°C</span>
-            </div>
-            <div>
-              <span class="Forecast-item-value">1</span><span class="Forecast-item-unit">m/s</span>
-            </div>
-          </div>
-        </div>
-
-        <div class="Forecast-item">
-          <div class="Forecast-item-time">18:00</div>
-          <div class="Forecast-item-icon-container">
-            <i class="Forecast-item-icon wi wi-day-fog"></i>
-          </div>
-          <div class="Forecast-item-numbers">
-            <div class="Forecast-item-temperature">
-              <span class="Forecast-item-value">7</span><span class="Forecast-item-unit">°C</span>
-            </div>
-            <div>
-              <span class="Forecast-item-value">0.4</span><span class="Forecast-item-unit">m/s</span>
-            </div>
-          </div>
-        </div>
-
-        <div class="Forecast-item">
-          <div class="Forecast-item-time">21:00</div>
-          <div class="Forecast-item-icon-container">
-            <i class="Forecast-item-icon wi wi-night-cloudy-windy"></i>
-          </div>
-          <div class="Forecast-item-numbers">
-            <div class="Forecast-item-temperature">
-              <span class="Forecast-item-value">15</span><span class="Forecast-item-unit">°C</span>
-            </div>
-            <div>
-              <span class="Forecast-item-value">2</span><span class="Forecast-item-unit">m/s</span>
-            </div>
-          </div>
-        </div>
-
-        <div class="Forecast-item">
-          <div class="Forecast-item-time">0:00</div>
-          <div class="Forecast-item-icon-container">
-            <i class="Forecast-item-icon wi wi-night-alt-cloudy"></i>
-          </div>
-          <div class="Forecast-item-numbers">
-            <div class="Forecast-item-temperature">
-              <span class="Forecast-item-value">5</span><span class="Forecast-item-unit">°C</span>
-            </div>
-            <div>
-              <span class="Forecast-item-value">2</span><span class="Forecast-item-unit">m/s</span>
-            </div>
-          </div>
-        </div>
-
-        <div class="Forecast-item">
-          <div class="Forecast-item-time">9:00</div>
+          <div id="forecast-item-2-time" class="Forecast-item-time">9:00</div>
           <div class="Forecast-item-icon-container">
             <i class="Forecast-item-icon wi wi-day-sunny"></i>
           </div>
           <div class="Forecast-item-numbers">
             <div class="Forecast-item-temperature">
-              <span class="Forecast-item-value">5</span><span class="Forecast-item-unit">°C</span>
+              <span id="forecast-item-2-temperature" class="Forecast-item-value">5</span><span
+                class="Forecast-item-unit">°C</span>
             </div>
             <div>
-              <span class="Forecast-item-value">2</span><span class="Forecast-item-unit">m/s</span>
+              <span id="forecast-item-2-wind" class="Forecast-item-value">2</span><span
+                class="Forecast-item-unit">m/s</span>
+            </div>
+            <div>
+              <span id="forecast-item-2-precipitation" class="Forecast-item-value">2</span><span
+                class="Forecast-item-unit">mm</span>
             </div>
           </div>
         </div>
 
         <div class="Forecast-item">
-          <div class="Forecast-item-time">12:00</div>
+          <div id="forecast-item-3-time" class="Forecast-item-time">9:00</div>
           <div class="Forecast-item-icon-container">
             <i class="Forecast-item-icon wi wi-day-sunny"></i>
           </div>
           <div class="Forecast-item-numbers">
             <div class="Forecast-item-temperature">
-              <span class="Forecast-item-value">5</span><span class="Forecast-item-unit">°C</span>
+              <span id="forecast-item-3-temperature" class="Forecast-item-value">5</span><span
+                class="Forecast-item-unit">°C</span>
             </div>
             <div>
-              <span class="Forecast-item-value">2</span><span class="Forecast-item-unit">m/s</span>
+              <span id="forecast-item-3-wind" class="Forecast-item-value">2</span><span
+                class="Forecast-item-unit">m/s</span>
+            </div>
+            <div>
+              <span id="forecast-item-3-precipitation" class="Forecast-item-value">2</span><span
+                class="Forecast-item-unit">mm</span>
+            </div>
+          </div>
+        </div>
+
+        <div class="Forecast-item">
+          <div id="forecast-item-4-time" class="Forecast-item-time">9:00</div>
+          <div class="Forecast-item-icon-container">
+            <i class="Forecast-item-icon wi wi-day-sunny"></i>
+          </div>
+          <div class="Forecast-item-numbers">
+            <div class="Forecast-item-temperature">
+              <span id="forecast-item-4-temperature" class="Forecast-item-value">5</span><span
+                class="Forecast-item-unit">°C</span>
+            </div>
+            <div>
+              <span id="forecast-item-4-wind" class="Forecast-item-value">2</span><span
+                class="Forecast-item-unit">m/s</span>
+            </div>
+            <div>
+              <span id="forecast-item-4-precipitation" class="Forecast-item-value">2</span><span
+                class="Forecast-item-unit">mm</span>
+            </div>
+          </div>
+        </div>
+
+        <div class="Forecast-item">
+          <div id="forecast-item-5-time" class="Forecast-item-time">9:00</div>
+          <div class="Forecast-item-icon-container">
+            <i class="Forecast-item-icon wi wi-day-sunny"></i>
+          </div>
+          <div class="Forecast-item-numbers">
+            <div class="Forecast-item-temperature">
+              <span id="forecast-item-5-temperature" class="Forecast-item-value">5</span><span
+                class="Forecast-item-unit">°C</span>
+            </div>
+            <div>
+              <span id="forecast-item-5-wind" class="Forecast-item-value">2</span><span
+                class="Forecast-item-unit">m/s</span>
+            </div>
+            <div>
+              <span id="forecast-item-5-precipitation" class="Forecast-item-value">2</span><span
+                class="Forecast-item-unit">mm</span>
+            </div>
+          </div>
+        </div>
+
+        <div class="Forecast-item">
+          <div id="forecast-item-6-time" class="Forecast-item-time">9:00</div>
+          <div class="Forecast-item-icon-container">
+            <i class="Forecast-item-icon wi wi-day-sunny"></i>
+          </div>
+          <div class="Forecast-item-numbers">
+            <div class="Forecast-item-temperature">
+              <span id="forecast-item-6-temperature" class="Forecast-item-value">5</span><span
+                class="Forecast-item-unit">°C</span>
+            </div>
+            <div>
+              <span id="forecast-item-6-wind" class="Forecast-item-value">2</span><span
+                class="Forecast-item-unit">m/s</span>
+            </div>
+            <div>
+              <span id="forecast-item-6-precipitation" class="Forecast-item-value">2</span><span
+                class="Forecast-item-unit">mm</span>
+            </div>
+          </div>
+        </div>
+
+        <div class="Forecast-item">
+          <div id="forecast-item-7-time" class="Forecast-item-time">9:00</div>
+          <div class="Forecast-item-icon-container">
+            <i class="Forecast-item-icon wi wi-day-sunny"></i>
+          </div>
+          <div class="Forecast-item-numbers">
+            <div class="Forecast-item-temperature">
+              <span id="forecast-item-7-temperature" class="Forecast-item-value">5</span><span
+                class="Forecast-item-unit">°C</span>
+            </div>
+            <div>
+              <span id="forecast-item-7-wind" class="Forecast-item-value">2</span><span
+                class="Forecast-item-unit">m/s</span>
+            </div>
+            <div>
+              <span id="forecast-item-7-precipitation" class="Forecast-item-value">2</span><span
+                class="Forecast-item-unit">mm</span>
             </div>
           </div>
         </div>
@@ -619,61 +667,66 @@
         </div>
 
         <div class="Forecast-item">
-          <div class="Forecast-item-time">Tue</div>
+          <div id="forecast-5days-item-0-time" class="Forecast-item-time">Tue</div>
           <div class="Forecast-item-icon-container">
             <i class="Forecast-item-icon wi wi-day-sunny"></i>
           </div>
           <div class="Forecast-item-numbers">
             <div class="Forecast-item-temperature">
-              <span class="Forecast-item-value">5</span><span class="Forecast-item-unit">°C</span>
+              <span id="forecast-5days-item-0-temperature" class="Forecast-item-value">5</span><span
+                class="Forecast-item-unit">°C</span>
             </div>
           </div>
         </div>
 
         <div class="Forecast-item">
-          <div class="Forecast-item-time">Wed</div>
+          <div id="forecast-5days-item-1-time" class="Forecast-item-time">Wed</div>
           <div class="Forecast-item-icon-container">
             <i class="Forecast-item-icon wi wi-day-sunny"></i>
           </div>
           <div class="Forecast-item-numbers">
             <div class="Forecast-item-temperature">
-              <span class="Forecast-item-value">5</span><span class="Forecast-item-unit">°C</span>
+              <span id="forecast-5days-item-1-temperature" class="Forecast-item-value">5</span><span
+                class="Forecast-item-unit">°C</span>
             </div>
           </div>
         </div>
 
         <div class="Forecast-item">
-          <div class="Forecast-item-time">Thu</div>
+          <div id="forecast-5days-item-2-time" class="Forecast-item-time">Thu</div>
           <div class="Forecast-item-icon-container">
             <i class="Forecast-item-icon wi wi-day-fog"></i>
           </div>
           <div class="Forecast-item-numbers">
             <div class="Forecast-item-temperature">
-              <span class="Forecast-item-value">7</span><span class="Forecast-item-unit">°C</span>
+              <span id="forecast-5days-item-2-temperature" class="Forecast-item-value">7</span><span
+                class="Forecast-item-unit">°C</span>
             </div>
           </div>
         </div>
 
         <div class="Forecast-item">
-          <div class="Forecast-item-time">Fri</div>
+          <div id="forecast-5days-item-3-time" class="Forecast-item-time">Fri</div>
           <div class="Forecast-item-icon-container">
             <i class="Forecast-item-icon wi wi-day-fog"></i>
           </div>
           <div class="Forecast-item-numbers">
             <div class="Forecast-item-temperature">
-              <span class="Forecast-item-value">6</span><span class="Forecast-item-unit">°C</span>
+              <span id="forecast-5days-item-3-temperature" class="Forecast-item-value">6</span><span
+                class="Forecast-item-unit">°C</span>
             </div>
           </div>
         </div>
 
         <div class="Forecast-item">
-          <div class="Forecast-item-time">Sat</div>
+          <div id="forecast-5days-item-4-time" class="Forecast-item-time">Sat</div>
           <div class="Forecast-item-icon-container">
             <i class="Forecast-item-icon wi wi-night-cloudy-windy"></i>
           </div>
           <div class="Forecast-item-numbers">
             <div class="Forecast-item-temperature">
-              <span class="Forecast-item-value">5</span><span class="Forecast-item-unit">°C</span>
+              <span id="forecast-5days-item-4-temperature" class="Forecast-item-value">5</span><span
+                class="Forecast-item-unit">°C</span>
             </div>
           </div>
         </div>
