Add meteo API calls

--- a/render/src/templates/index.html
+++ b/render/src/templates/index.html
@@ -309,7 +309,7 @@
     }
 
     .WeatherDetails-item-unit {
-      font-size: var(--text-size);
+      font-size: var(--text-size-s);
     }
 
     /* Bottom section */
@@ -378,7 +378,7 @@
 
     .Forecast-item-unit {
       display: inline-block;
-      font-size: var(--text-size-s);
+      font-size: var(--text-size-xs);
       width: 1.8rem;
     }
 
